# symmetry-detection

./: CMakeLists.txt  README.MD
assets/: out.ply
cmake/: FindOpenMesh.cmake
include/: bounding_box.h  config.h  spherical_coordinate_system.h
include/common/: common.h  config.h  mesh.h
include/demo/: gedt_showcase.h
include/gedt/: gedt.h  octree.h
include/geometry/: cartesianplane.h  face_intersection.h  grid.h  plane.h  sphericalplane.h
include/prst/: maxima.h  prst.h  sampler.h
include/util/: image.h  tensor.h
src/: bounding_box.cpp  main.cpp  spherical_coordinate_system.cpp
src/gedt/: gedt.cpp  octree.cpp
src/prst/: prst.cpp
test/: bounding_box_test.cpp  spherical_coordinate_system_test.cpp
test/gedt/: gedt_test.cpp  octree_test.cpp
test/geometry/: face_intersection_test.cpp  grid_test.cpp  plane_test.cpp
test/prst/: prst_test.cpp  sampler_test.cpp
test/test_util/: assertions.h  mesh_factory.h
test/test_util/factory/: gedt_factory.h
test/util/: tensor_test.cpp
